# ChangeLog for media-libs/openjpeg
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/openjpeg/ChangeLog,v 1.33 2009/10/19 19:15:49 aballier Exp $

  19 Oct 2009; Alexis Ballier <aballier@gentoo.org> openjpeg-1.3-r2.ebuild:
  keyword ~sparc-fbsd

  30 Jun 2009; Raúl Porcel <armin76@gentoo.org> openjpeg-1.3-r2.ebuild:
  arm/ia64/s390/sh/sparc stable

  11 Jun 2009; Jeroen Roovers <jer@gentoo.org> openjpeg-1.3-r2.ebuild:
  Stable for HPPA (bug #272980).

  05 Jun 2009; Peter Alfredsen <loki_val@gentoo.org> -openjpeg-1.1.1.ebuild,
  -openjpeg-1.2.ebuild, -openjpeg-1.3-r1.ebuild, metadata.xml:
  Retiring, bug 220219. Re-assigning maintainership to graphics herd as the
  logical choice.

  21 May 2009; Brent Baude <ranger@gentoo.org> openjpeg-1.3-r2.ebuild:
  Marking openjpeg-1.3-r2 ppc64 stable for bug 266986

  21 May 2009; Brent Baude <ranger@gentoo.org> openjpeg-1.3-r2.ebuild:
  Marking openjpeg-1.3-r2 ppc stable for bug 266986

  14 May 2009; Markus Meier <maekke@gentoo.org> openjpeg-1.3-r2.ebuild:
  amd64 stable, bug #266986

  12 May 2009; Christian Faulhammer <fauli@gentoo.org>
  openjpeg-1.3-r2.ebuild:
  stable x86, bug 266986

  03 May 2009; Tobias Klausmann <klausman@gentoo.org>
  openjpeg-1.3-r2.ebuild:
  Stable on alpha, bug #266986

  26 Apr 2009; Fabian Groffen <grobian@gentoo.org>
  +files/openjpeg-1.3-darwin.patch, +files/openjpeg-1.3-freebsd.patch,
  openjpeg-1.3-r2.ebuild:
  Add compilation patches for FreeBSD and Darwin, fix bug #253012, thanks Dan
  Coats for the initial patch for FreeBSD

  13 Apr 2009; Peter Alfredsen <loki_val@gentoo.org> metadata.xml:
  Drizzt retired, I'll take this.

  27 Feb 2009; Raúl Porcel <armin76@gentoo.org> openjpeg-1.3.ebuild:
  arm/ia64/s390/sh stable wrt #260266

  26 Feb 2009; Jeroen Roovers <jer@gentoo.org> openjpeg-1.3.ebuild:
  Stable for HPPA (bug #260266).

*openjpeg-1.3-r2 (10 Feb 2009)

  10 Feb 2009; Timothy Redaelli <drizzt@gentoo.org>