@@ -5,5 +5,6 @@ AUX openjpeg-1.3-darwin.patch 1176 RMD160 b05ce81dfecfa41f15a4f70041a3fa04c70926
 AUX openjpeg-1.3-freebsd.patch 672 RMD160 b368524439bd11d3c68bc6e2b4aa129c08e7dd5a SHA1 8d51276c8d1ade2a7fe8ff76937d87c69daa7e51 SHA256 ea7113fbe3cdc2bc3d9199b266824be74f3556025a512c0cd2435797aa385809
 DIST openjpeg_v1_3.tar.gz 1004678 RMD160 2a22cc123058b1974cd1bf3898044acabceba26c SHA1 8d6870d9500ea09e0b1d30b981bea1c8de534de4 SHA256 3bca2e1e040f9dcbbcb1e0627f17a76eeb95e153bf663d082070c044a21202bd
 EBUILD openjpeg-1.3-r2.ebuild 1683 RMD160 8762ec7b11e6fb69cda5d9d0d9b9610166a9be32 SHA1 ace4a463d2896a298a11912de6e0a42df0fc668a SHA256 48bd35756b619ebcbac2af419a72ab22c5a99b59128003a25e67498dd266b669
-MISC ChangeLog 4777 RMD160 ca43d7770f076e2b5e257d5e93e2e9a88a4c05b2 SHA1 d69f300e7cc14eba39a93babbad020bbb906000f SHA256 c7ce3cd5e74cc1d333af85c02c04197afa2f19d9dbf868718a0b1b2ef8cc7371
+EBUILD openjpeg-1.3-r3.ebuild 1925 RMD160 869f64bd14b628f5836058ff25489854c3f959e8 SHA1 518d30393b9fa5c31c45fe23e15f6182ffcb3660 SHA256 cba9ab17173d2ef096bd2fcef2aca5af3247a1613b9dbcc6c12235477823ab74
+MISC ChangeLog 5024 RMD160 cb5ab08c2867653c279bb8a0fdc9f3135c32ead8 SHA1 b3b336bef9159bed4a2365ed9770e8ebaaab8f15 SHA256 47f30d931d341893ac79b3457f525caaaac02f3b39522483f86356572d70c96b
 MISC metadata.xml 257 RMD160 80c1eb9046b53f99e237da460c933b844ccc7b63 SHA1 84398d153001807fcb12f140046c03c71f81afb3 SHA256 f59744ea0de26f01b0beefb513cb99989c8d295b37b738fbc7814a43ccfb9e59
