@@ -1,6 +1,13 @@
 # ChangeLog for media-libs/openjpeg
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openjpeg/ChangeLog,v 1.33 2009/10/19 19:15:49 aballier Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openjpeg/ChangeLog,v 1.34 2010/03/20 18:11:50 vapier Exp $
+
+*openjpeg-1.3-r3 (20 Mar 2010)
+
+  20 Mar 2010; Mike Frysinger <vapier@gentoo.org> +openjpeg-1.3-r3.ebuild,
+  +files/openjpeg-1.3-r3-codec-Makefile:
+  Fix stdbool.h/ppc+altivec issues #305333 by Leo Souza and clean up the
+  build system in general.
 
   19 Oct 2009; Alexis Ballier <aballier@gentoo.org> openjpeg-1.3-r2.ebuild:
   keyword ~sparc-fbsd
